--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,13 +1,47 @@
-{% extends 'layout.html' %}
-
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
 <div class="container" style="margin-top:100px;">
   {% include 'includes/_messages.html' %}
   <div class="row">
-    {% if session.type in ['admin','hod','mentor'] %}
+    {% if session.type in ['admin','hod'] %}
+    <div class="col">
+      <h3>Mentors</h3>
+      <hr />
+      <table class="table table-hover table-light">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Branch</th>
+            <th scope="col">Mentees</th>
+            <th colspan="3" class="text-center" scope="col">Option</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for mentor in all_mentors %}
+          <tr>
+            <th scope="row">{{loop.index}}</th>
+            <td>{{mentor.fname}} {{mentor.mname}} {{mentor.lname}}</td>
+            <td>{{mentor.branch}}</td>
+            <td>
+              {{mentee_count[mentor.email]}}
+            </td>
+
+            <td>
+              <a
+                class="btn btn-sm btn-danger"
+                href="{{url_for('delete_mentor', email=mentor.email)}}"
+                >Delete</a
+              >
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+    {% endif %} {% if session.type in ['admin','hod','mentor'] %}
     <div class="col">
       <h3>Mentees</h3>
-      <hr>
+      <hr />
       <table class="table table-hover table-light">
         <thead>
           <tr>
@@ -29,44 +63,41 @@
             <td>
               {{mentee.batch}}
             </td>
-            <td><a class="btn btn-sm btn-danger" href="{{url_for('delete_mentee',email=mentee.email)}}">Delete</a></td>
-            <td><a class="btn btn-primary" href="{{url_for('view_profile',email=mentee.email)}}">View profile</a></td>
-            <td><a class="btn btn-primary" href="{{url_for('view_chart',email=mentee.email)}}">Progress Chart</a></td>
-            <td><a class="btn btn-primary" href="{{url_for('view_documents',email=mentee.email)}}">Documents</a></td>
-            <td><a class="btn btn-primary"
-                href="{{url_for('view_profile',email=mentee.email,option='download')}}">Download</a></td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-    {% endif %}
-    {% if session.type in ['admin','hod'] %}
-    <div class="col">
-      <h3>Mentors</h3>
-      <hr>
-      <table class="table table-hover table-light">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Branch</th>
-            <th scope="col">Batches</th>
-            <th colspan="3" class="text-center" scope="col">Option</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for mentor in all_mentors %}
-          <tr>
-            <th scope="row">{{loop.index}}</th>
-            <td>{{mentor.fname}} {{mentor.mname}} {{mentor.lname}}</td>
-            <td>{{mentor.branch}}</td>
             <td>
-              {% for batch in mentor.batch %}
-              {{batch.batch_name}} - {{batch.year}} {{batch.division}} &nbsp;
-              {% endfor %}
+              <a
+                class="btn btn-sm btn-danger"
+                href="{{url_for('delete_mentee',email=mentee.email)}}"
+                >Delete</a
+              >
             </td>
-            <td><a class="btn btn-sm btn-danger" href="#">Delete</a></td>
+            <td>
+              <a
+                class="btn btn-primary"
+                href="{{url_for('view_profile',email=mentee.email)}}"
+                >View profile</a
+              >
+            </td>
+            <td>
+              <a
+                class="btn btn-primary"
+                href="{{url_for('view_chart',email=mentee.email)}}"
+                >Progress Chart</a
+              >
+            </td>
+            <td>
+              <a
+                class="btn btn-primary"
+                href="{{url_for('view_documents',email=mentee.email)}}"
+                >Documents</a
+              >
+            </td>
+            <td>
+              <a
+                class="btn btn-primary"
+                href="{{url_for('view_profile',email=mentee.email,option='download')}}"
+                >Download</a
+              >
+            </td>
           </tr>
           {% endfor %}
         </tbody>
@@ -74,11 +105,6 @@
     </div>
     {% endif %}
   </div>
-
-
 </div>
-
-
-   
 
 {% endblock %}
