--- a/templates/edit_mentor.html
+++ b/templates/edit_mentor.html
@@ -133,7 +133,7 @@
           </div>
           <div class="form-group">
             <label for="sel2">Branch</label>
-            <select name="branch" class="form-control" id="branch">
+            <select name="branch" class="form-control" id="branch" required>
               {% for branch in all_branches %}
               <option>{{branch.branch}}</option>
               {% endfor %}
