--- a/templates/profile.html
+++ b/templates/profile.html
@@ -110,7 +110,7 @@
               <div class="form-group col-md-4">
                 <label for="blood_group">Blood Group</label>
                 <input type="text" class="form-control" name="blood_group" value="{% if user.personal is defined %}{{user.personal.blood_group}}{% endif %}"
-                  id="blood_group" placeholder="B+">
+                  id="blood_group" placeholder="A+/B+/..">
               </div>
 
               <div class="form-group col-md-4">
