--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,19 +13,31 @@
             <th scope="col">Name</th>
             <th scope="col">Branch</th>
             <th scope="col">Mentees</th>
-            <th colspan="3" class="text-center" scope="col">Option</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
           {% for mentor in all_mentors %}
           <tr>
             <th scope="row">{{loop.index}}</th>
-            <td>{{mentor.fname}} {{mentor.mname}} {{mentor.lname}}</td>
+            <td>
+              <a href="{{url_for('show_mentees',email=mentor.email)}}">
+                {{mentor.fname}} {{mentor.mname}} {{mentor.lname}}</a
+              >
+            </td>
             <td>{{mentor.branch}}</td>
             <td>
               {{mentee_count[mentor.email]}}
             </td>
 
+            <td>
+              <a
+                class="btn btn-sm btn-secondary"
+                href="{{url_for('edit_mentor',email=mentor.email)}}"
+                >Edit</a
+              >
+            </td>
             <td>
               <a
                 class="btn btn-sm btn-danger"
