send_mail fixed

--- a/templates/edit_mentor.html
+++ b/templates/edit_mentor.html
@@ -151,7 +151,7 @@
                   class="btn btn-danger"
                   style="border: 1px solid transparent; background-color: #dc3545; margin-top: 15px;"
                   href="{{url_for('add_mentor')}}"
-                  >Cancle</a
+                  >Cancel</a
                 >
               </div>
             </div>
