--- a/templates/edit_hod.html
+++ b/templates/edit_hod.html
@@ -152,7 +152,7 @@
                   class="btn btn-danger"
                   style="border: 1px solid transparent; background-color: #dc3545; margin-top: 15px;"
                   href="{{url_for('add_hod')}}"
-                  >Cancle</a
+                  >Cancel</a
                 >
               </div>
             </div>
