--- a/templates/index.html
+++ b/templates/index.html
@@ -1,86 +1,80 @@
-{% extends 'layout.html' %}
-
-
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
 <div class="container" style="margin-top:100px;">
-    {% include 'includes/_messages.html' %}
+  {% include 'includes/_messages.html' %}
 
+  <div class="jumbotron">
+    <h1 class="display-4">Welcome {{session.fname}} !</h1>
+    <p class="lead">
+      This web portal is designed for the Mentoring.
+    </p>
+    <hr class="my-4" />
+    <p>
+      Manage Mentors/Mentee profiles, Documents And Meetings.
+    </p>
+    <p class="lead">
+      {% if session.logged_in %} {% else %}
+      <a
+        class="btn btn-primary btn-lg"
+        href="{{url_for('login')}}"
+        role="button"
+        >Login</a
+      >
+      {% endif %}
+    </p>
+  </div>
 
-    <div class="jumbotron">
-        <h1 class="display-4">Welcome {{session.fname}} !</h1>
-        <p class="lead">This web portal is designed for the mentors and their mentees.</p>
-        <hr class="my-4">
-        <p>It supports mentors and mentees to manage their profiles and meeting details.</p>
-        <p class="lead">
-                {% if session.logged_in %}
-                {% else %}
-          <a class="btn btn-primary btn-lg" href="{{url_for('login')}}" role="button">Login</a>
-          {% endif %}
-        </p>
-      </div>
+  {% if session.logged_in %} {% if session.type == 'mentee' %}
+  <h1>Meeting requests for you</h1>
+  <table class="table table-hover table-dark">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Subject</th>
+        <th scope="col">Time</th>
+        <th scope="col">Date</th>
+        <th scope="col">Venue</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for request in meeting_requests %}
 
-    {% if session.logged_in %}
-    {% if session.type == 'mentee' %}
-    <h1>Meeting requests for you</h1>
-    <table class="table table-hover table-dark">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Subject</th>
-                <th scope="col">Time</th>
-                <th scope="col">Date</th>
-                <th scope="col">Venue</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for request in meeting_requests %}
-
-            <tr>
-                <td>{{loop.index}}</td>
-                <td>{{request.subject}}</td>
-                <td>{{request.time}}</td>
-                <td>{{request.date}}</td>
-                <td>{{request.venue}}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    {% endif %}
-    {% endif %}
-
-    {% if session.logged_in %}
-    {% if session.type == 'mentor' %}
-    {% for bat in mentor1.batch %}
-    <h1>Upcomming meetings</h1>
-    <table class="table table-hover table-dark">
-        <thead>
-            <tr>
-                <th scope="col">Batch -{{bat.batch_name}}</th>
-                <th scope="col">Subject</th>
-                <th scope="col">Time</th>
-                <th scope="col">Date</th>
-                <th scope="col">Venue</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for request in meeting_requests1 %}
-            {% if request.batch in [bat.year + ' ' +bat.branch+ ' ' +bat.division+ ' batch ' +bat.batch_name] %}
-            <tr>
-                <td>{{loop.index}}</td>
-                <td>{{request.subject}}</td>
-                <td>{{request.time}}</td>
-                <td>{{request.date}}</td>
-                <td>{{request.venue}}</td>
-            </tr>
-            {% endif %}
-            {% endfor %}
-        </tbody>
-    </table>
-    {% endfor %}
-    {% endif %}
-    {% endif %}
+      <tr>
+        <td>{{loop.index}}</td>
+        <td>{{request.subject}}</td>
+        <td>{{request.time}}</td>
+        <td>{{request.date}}</td>
+        <td>{{request.venue}}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endif %} {% endif %} {% if session.logged_in %} {% if session.type ==
+  'mentor' %} {% for bat in mentor1.batch %}
+  <h1>Upcomming meetings</h1>
+  <table class="table table-hover table-dark">
+    <thead>
+      <tr>
+        <th scope="col">Batch -{{bat.batch_name}}</th>
+        <th scope="col">Subject</th>
+        <th scope="col">Time</th>
+        <th scope="col">Date</th>
+        <th scope="col">Venue</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for request in meeting_requests1 %} {% if request.batch in [bat.year +
+      ' ' +bat.branch+ ' ' +bat.division+ ' batch ' +bat.batch_name] %}
+      <tr>
+        <td>{{loop.index}}</td>
+        <td>{{request.subject}}</td>
+        <td>{{request.time}}</td>
+        <td>{{request.date}}</td>
+        <td>{{request.venue}}</td>
+      </tr>
+      {% endif %} {% endfor %}
+    </tbody>
+  </table>
+  {% endfor %} {% endif %} {% endif %}
 </div>
-
-
 
 {% endblock %}
