--- a/templates/send_mail.html
+++ b/templates/send_mail.html
@@ -1,49 +1,43 @@
-{% extends 'layout.html' %}
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
 
 <div class="container" style="margin-top:100px;">
-        {% include 'includes/_messages.html' %}
-        <form action="{{url_for('send_mail')}}" method="post">
-                <h2 class="text-center">Send Mail</h2>
-                <div class="form-group">
-                    <label for="subject">Subject</label>
-                    <input class="form-control" type="text" name="subject" id="subject" placeholder="Subject">
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="editor" class="form-control" name="message" id="message">
+  {% include 'includes/_messages.html' %}
+  <form action="{{url_for('send_mail')}}" method="post">
+    <h2 class="text-center">Send Mail</h2>
+    <div class="form-group">
+      <label for="subject">Subject</label>
+      <input
+        class="form-control"
+        type="text"
+        name="subject"
+        id="subject"
+        placeholder="Subject"
+      />
+    </div>
+    <div class="form-group">
+      <label for="message">Message</label>
+      <textarea id="editor" class="form-control" name="message" id="message">
+      </textarea>
+    </div>
 
-                    </textarea>
-                </div>
-                
-                
-                <div class="form-group col-md-4">
-                    <label for="receiver">Send to</label>
-                    <select name="receiver" class="form-control" id="receiver">
-                        {% if session.type in ['admin'] %}
-                            <option>All Users</option>
-                            <option>All HODs</option>
-                        {% endif %}
-                        {% if session.type in ['admin','hod'] %}
-                            <option>All Mentors</option>
-                        {% endif %}
-                        {% if session.type in ['admin','hod','mentor'] %}
-                            <option>All Mentees</option>
-                        {% endif %}
-                        
-                            
-                        
-                    </select>
-                </div>
-                
+    <div class="form-group col-md-4">
+      <label for="receiver">Send to</label>
+      <select name="receiver" class="form-control" id="receiver">
+        {% if session.type in ['admin'] %}
+        <option>All Users</option>
+        <option>All HODs</option>
+        {% endif %} {% if session.type in ['admin','hod'] %}
+        <option>All Mentors</option>
+        {% endif %} {% if session.type in ['admin','hod','mentor'] %}
+        <option>All Mentees</option>
+        {% endif %}
+      </select>
+    </div>
 
-                
-
-                <div class="form-group">
-                    <button class="btn btn-primary" type="submit">Add </button>
-                </div>
-            </form>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">Send</button>
+    </div>
+  </form>
 </div>
-
 
 {% endblock %}
