--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -61,7 +61,7 @@
             <th scope="col">Name</th>
             <th scope="col">Year</th>
             <th scope="col">Branch</th>
-            <th scope="col">Batches</th>
+            <th scope="col">Mentor</th>
             <th colspan="3" class="text-center" scope="col">Option</th>
           </tr>
         </thead>
@@ -73,7 +73,7 @@
             <td>{{mentee.year}}</td>
             <td>{{mentee.branch}}</td>
             <td>
-              {{mentee.batch}}
+              {{mentee.mentor}}
             </td>
             <td>
               <a
