--- a/templates/meeting_request.html
+++ b/templates/meeting_request.html
@@ -1,78 +1,90 @@
-{% extends 'layout.html' %}
+{% extends 'layout.html' %} {% block body %}
 
-{% block body %}
-
-<div class="contact-clean" style="margin-top:40px;">
-    {% include 'includes/_messages.html' %}
-    <div class="row">
-        <div class="col-md-5">
-    <form action="{{url_for('meeting_request')}}" method="POST">
+<div class="contact-clean" style="margin-top:40px; overflow: auto;">
+  <div class="row">
+    <div class="col-md-5">
+      {% include 'includes/_messages.html' %}
+      <form action="{{url_for('meeting_request')}}" method="POST">
         <h2 class="text-center">Generate Meeting request</h2>
         <div class="form-group">
-            <input class="form-control" type="text" name="subject" placeholder="Meeting Subject">
+          <input
+            class="form-control"
+            type="text"
+            name="subject"
+            placeholder="Meeting Subject"
+          />
         </div>
         <div class="form-group">
-            <input class="form-control" type="text" name="time" placeholder="Time">
+          <input
+            class="form-control"
+            type="text"
+            name="time"
+            placeholder="Time"
+          />
         </div>
         <div class="form-group">
-            <input class="form-control" type="date" name="date" placeholder="YYYY-DD-MM">
+          <input
+            class="form-control"
+            type="date"
+            name="date"
+            placeholder="YYYY-DD-MM"
+          />
         </div>
         <div class="form-group">
-            <input class="form-control" type="text" name="venue" placeholder="Venue">
+          <input
+            class="form-control"
+            type="text"
+            name="venue"
+            placeholder="Venue"
+          />
         </div>
-
 
         <div class="form-group">
-            <label for="sel1">batch</label>
-            <select name="batch" class="form-control" id="sel1">
-                <option>select</option>
-                {% for bat in mentor.batch %}
-                <option>{{bat.year}} {{bat.branch}} {{bat.division}} batch {{bat.batch_name}}</option>
-                {% endfor %}
-            </select>
+          <label for="sel1">Send To</label>
+          <select name="meeting_for" class="form-control" id="sel1">
+            <option>All Mentees</option>
+          </select>
         </div>
-
-
-
-
-
-
-
 
         <div class="form-group">
-            <input type="submit" value="Generate">
+          <button class="btn btn-primary">Generate</button>
         </div>
-    </form>
+      </form>
     </div>
     <div class="col-md-5">
-        <table class="table table-hover table-dark">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Subject</th>
-                    <th scope="col">Time</th>
-                    <th scope="col">Date</th>
-                    <th scope="col">Venue</th>
-                    <th scope="col">Options</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for meeting in all_meetings %}
-                <tr>
-                    <th scope="row">{{loop.index}}</th>
-                    <td>{{meeting.subject}}</td>
-                    <td>{{meeting.time}}</td>
-                    <td>{{meeting.date}}</td>
-                    <td>
-                        {{meeting.venue}}
-                    </td>
-                    <td><a class="btn btn-sm btn-danger" href="{{url_for('delete_meeting',id=meeting.meeting_id)}}">Delete</a></td>
-                    
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+      <table class="table table-hover table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Subject</th>
+            <th scope="col">Time</th>
+            <th scope="col">Date</th>
+            <th scope="col">Venue</th>
+            <th scope="col">Options</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for meeting in all_meetings %}
+          <tr>
+            <th scope="row">{{loop.index}}</th>
+            <td>{{meeting.subject}}</td>
+            <td>{{meeting.time}}</td>
+            <td>{{meeting.date}}</td>
+            <td>
+              {{meeting.venue}}
+            </td>
+            <td>
+              <a
+                class="btn btn-sm btn-danger"
+                href="{{url_for('delete_meeting',id=meeting.meeting_id)}}"
+                >Delete</a
+              >
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
-    </div>
+  </div>
 </div>
 {% endblock %}
