--- a/templates/meeting_request.html
+++ b/templates/meeting_request.html
@@ -3,10 +3,11 @@
 <div class="contact-clean" style="margin-top:40px; overflow: auto;">
   <div class="row">
     <div class="col-md-5">
-      {% include 'includes/_messages.html' %}
       <form action="{{url_for('meeting_request')}}" method="POST">
+        {% include 'includes/_messages.html' %}
         <h2 class="text-center">Generate Meeting request</h2>
         <div class="form-group">
+          <label for="sel1">Subject</label>
           <input
             class="form-control"
             type="text"
@@ -15,14 +16,16 @@
           />
         </div>
         <div class="form-group">
+          <label for="sel1">Time</label>
           <input
             class="form-control"
-            type="text"
+            type="time"
             name="time"
             placeholder="Time"
           />
         </div>
         <div class="form-group">
+          <label for="sel1">Date</label>
           <input
             class="form-control"
             type="date"
@@ -31,6 +34,7 @@
           />
         </div>
         <div class="form-group">
+          <label for="sel1">Venue</label>
           <input
             class="form-control"
             type="text"
@@ -60,7 +64,8 @@
             <th scope="col">Time</th>
             <th scope="col">Date</th>
             <th scope="col">Venue</th>
-            <th scope="col">Options</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -72,6 +77,13 @@
             <td>{{meeting.date}}</td>
             <td>
               {{meeting.venue}}
+            </td>
+            <td>
+              <a
+                class="btn btn-sm btn-secondary"
+                href="{{url_for('edit_meeting',id=meeting.meeting_id)}}"
+                >Edit</a
+              >
             </td>
             <td>
               <a
