--- a/templates/show_mentees.html
+++ b/templates/show_mentees.html
@@ -3,7 +3,11 @@
 <div style="margin-top:100px;">
   <div class="container">
       
-    <H4>All Mentees Under {{mentor['fname']}} {{mentor['lname']}}</H4>
+    <H4>All Mentees Under {{mentor['fname']}} {{mentor['lname']}} - <a
+      class="btn btn-sm btn-primary float-right"
+      href="{{url_for('download_status', email=all_mentees[0].mentor_email)}}"
+      >Download All Mentee Status</a
+    ></H4>
     <table class="table table-hover table-dark">
       <thead>
         <tr>
