--- a/templates/manage_subjects.html
+++ b/templates/manage_subjects.html
@@ -1,86 +1,128 @@
-{% extends 'layout.html' %}
-
-{% block body %}
+{% extends 'layout.html' %} {% block body %}
 <div style="margin-top:50px;">
-    <div class="contact-clean">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-5">
+  <div class="contact-clean">
+    <div class="container">
+      <div class="row">
+        {% for branch in all_subjects %}
 
-                    {% include 'includes/_messages.html' %}
-                    <form action="{{url_for('manage_subjects')}}" method="post">
-                        <h2 class="text-center">Add Subject</h2>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="subject_name" placeholder="Subject Name">
-                        </div>
-                        <div class="form-group">
-                            <label for="sel1">Semester</label>
-                            <select name="semester" class="form-control" id="sel1">
-                                {% for i in range(1,9) %}
-                                <option>{{i}}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
+        <table class="table table-hover table-bordered table-light" style="">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col" class="text-center">Semester</th>
 
-                        <div class="form-group">
-                            <label for="sel2">Branch</label>
-                            <select name="branch" class="form-control" id="sel2">
-                                {% for branch in branches %}
-                                {% if session.type == 'hod' %}
-                                {% if session.branch == branch.branch %}
-                                <option>{{branch.branch}}</option>
-                                {% endif %}
-                                {% endif %}
-                                {% if session.type == 'admin' %}
-                                <option>{{branch.branch}}</option>
-                                {% endif %}
-                                {% endfor %}
+              <th scope="col" class="text-center" colspan="10">Subjects</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for semester in branch.subjects%}
 
-                            </select>
-                        </div>
+            <tr>
+              <th class="text-center">{{semester.semester}}</th>
+              {% for subject in semester.subject %}
 
+              <td>{{subject}}</td>
+              {% endfor %}
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
 
-
-                        <div class="form-group">
-                            <button class="btn btn-primary" type="submit">Add </button>
-                        </div>
-                    </form>
-                </div>
-                <!--First column end-->
-                <div class="col">
-                    {% for branch in all_subjects %}
-
-                    <table class="table table-hover table-bordered table-light">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col" class="text-center">Semester</th>
-
-                                <th scope="col" class="text-center" colspan="10">Subjects</th>
-
-
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for semester in branch.subjects%}
-
-                            <tr>
-                                <th class="text-center">{{semester.semester}}</th>
-                                {% for subject in semester.subject %}
-
-                                <td>{{subject}}</td>
-                                {% endfor %}
-                            </tr>
-                            {% endfor %}
-
-
-                        </tbody>
-                    </table>
-
-                    {% endfor %}
-                </div>
+        {% endfor %}
+      </div>
+      <div class="row">
+        <div
+        class="alert alert-danger alert-dismissible fade show"
+        role="alert"
+      >Alert! Once mentee submits his marks. Edits wont reflect on student profile. Only New subjects will.  
+      </div>
+      
+        <div class="col-md-6">
+          {% include 'includes/_messages.html' %}
+          <form action="{{url_for('manage_subjects')}}" method="post">
+            <h2 class="text-center">Add Subject</h2>
+            <div class="form-group">
+              <input
+                class="form-control"
+                type="text"
+                name="subject_name"
+                placeholder="Subject Name"
+              />
             </div>
-        </div>
-    </div>
-</div>
+            <div class="form-group">
+              <label for="sel1">Semester</label>
+              <select name="semester" class="form-control" id="sel1">
+                {% for i in range(1,9) %}
+                <option>{{i}}</option>
+                {% endfor %}
+              </select>
+            </div>
 
-{% endblock %}
+            <div class="form-group">
+              <label for="sel2">Branch</label>
+              <select name="branch" class="form-control" id="sel2">
+                {% for branch in branches %} {% if session.type == 'hod' %} {%
+                if session.branch == branch.branch %}
+                <option>{{branch.branch}}</option>
+                {% endif %} {% endif %} {% if session.type == 'admin' %}
+                <option>{{branch.branch}}</option>
+                {% endif %} {% endfor %}
+              </select>
+            </div>
+
+            <div class="form-group">
+              <button class="btn btn-primary" type="submit">Add</button>
+            </div>
+          </form>
+        </div>
+          <div class="col-md-6">
+            <form action="{{url_for('edit_subject')}}" method="POST">
+              <h2 class="text-center">Edit / Delete Subject</h2>
+              <div
+                class="alert alert-danger alert-dismissible fade show"
+                role="alert"
+              >Alert! Copy old Subject name from the table.
+              </div>
+              <div class="form-group">
+                <input
+                  class="form-control"
+                  type="text"
+                  name="old_subject"
+                  placeholder="Current Subject Name"
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  class="form-control"
+                  type="text"
+                  name="new_subject"
+                  placeholder="New Subject Name"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="sel1">Option</label>
+                <select name="subjectoption" class="form-control" id="sel1">
+                  <option>Edit</option>
+                  <option>Delete</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="sel1">Semester</label>
+                <select name="semester" class="form-control" id="sel1">
+                  {% for i in range(1,9) %}
+                  <option>{{i}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              <button class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+          <!--First column end-->
+          <div class="col"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  {% endblock %}
+</div>
